# githubpagetest

./: .codeqlconfig  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .gitmessage.html  .lighthouserc.json  .prettierignore  AUDITORIA_SECRETOS_FINAL.md  CNAME  CODEQL_FIXES.md  CONTRIBUTING.md  Codigo_de_Conducta.Md  FIXES_CI_CD.md  GITHUB-PAGES-FIX.md  GitHub.bat  Inicio.html  README.md  REPORT.md  RESUMEN-OPTIMIZACION.md  RESUMEN_FIXES_COMPLETO.md  SECRETS_AUDIT_REPORT.md  SECURITY-IMPROVEMENTS.md  SECURITY_REMAINING.md  SECURITY_UPDATES.md  SOLUCION_CODEQL.md  SOLUCION_ERRORES_JAVASCRIPT.md  __init__.py  _headers  _redirects  analyze-main-index-files.py  analyze-mobile-issues.js  api_keys_to_replace.txt  base.html  contacto.html  core-web-vitals.json  diagnostico.html  docker-compose.dev.yml  env_template.env  git_auto.sh  (+33 more)
.codegpt/: head
.github/: dependabot.yml  pages.yml
Blog/: Ceo.html  Diseño.html  IA.html  React.html
Certificados/: index.html
Evidencias/: Menu.html  red.html  script.js  style.css
assets/: README.md  main-index-files-analysis.json
commit-emails/: commit_f4e058ed_20250810_230816.html
config/: .hintrc  .htaccess  README.md  compose.dev.yml  compose.yaml  email-config.json  env.example  package-lock.json  package.json  performance-manifest.json  security-config.js  security-config.json
css/: additional-styles.css  style.css
data/: es.json
docs/: API.md  OPTIMIZACION-RENDIMIENTO-2026.md  SECURITY.md  WEBGL-SHADERS-GUIDE.md  audio-system-implementation.md  codeql-setup.md  commit-emails.md  dependabot-troubleshooting.md  (+5 more)
(+549 files in other folders)
